styles/style.css
.page {
    display: flex;
    margin: 0;
    font-family: 'Rubik', sans-serif;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    text-align: center;
}
/*header*/
.header {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    margin: 0;
    position: fixed;
    height: 100px;
    background: white;
    padding: 10px 0 13px;
}

.logo__box {
    flex-grow: 2;
    width: 100%;
    display: flex;
    justify-content: center;
}

.logo__image {
    width: 155px;
    margin-bottom: 10px;
}

.logo__image__link {
    height: 61px;
}

.menu {
    text-transform: uppercase;
    font-size: 16px;
    width: 155px;
    color: #4a4a4a;
    margin: 0;
    list-style: none;
    padding: 0;
    flex-grow: 1;
    display: flex;
    justify-content: center;
}

.menu_item_link {
    text-decoration: none;
    color: #4a4a4a;
}

.menu_item {
    display: inline;
    text-align: center;
}

.menu_item + .menu_item {
    margin-left: 20px;
}

/*main content*/
.content {
    background: #3CDBC0;
    color: #FFFFFF;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    text-transform: capitalize;
}

.title {
    font-size: 30px;
    text-align: center;
    padding-left: 50px;
    padding-right: 50px;
    }

/*tablet and desktop*/
@media all and (min-width: 768px) {
    .header {
        flex-wrap: nowrap;
        justify-content: flex-end;
        padding: 20px 30px;
        box-sizing: border-box;
    }
    .logo__box {
        justify-content: flex-start;
    }
    .menu {
        font-size: 16px;
    }

    .title {
        font-size: 40px;
    }

    .content {
        width: 100%;
    }
}

